个人中心，意见反馈，系统设置

--- a/html/myCenter/feedback.html
+++ b/html/myCenter/feedback.html
@@ -12,6 +12,66 @@
 			.mui-text-white{
 				color:#ffffff;
 			}
+			.mui-content{
+				background: #f4f4f4;
+			}
+			.mui-content>.mui-table-view:first-child{
+				margin: 10px auto;
+			}
+			.login-box .mui-table-view-cell{
+				padding: 15px;
+			}
+			.login-box .mui-table-view-cell>a:not(.mui-btn){
+				margin: -15px;
+			}
+			.mui-table-view .img-box{
+				width: 54px;
+				height: 54px;
+				border-radius: 50%;
+				background: #f8f8f8;
+			    margin-right: 17px;
+   				margin-left: 25px;
+   				overflow: hidden;
+			}
+			.img-box .userImg{
+				width: 100%;
+				height: 100%;
+			}
+			.login-box .noLoginBox{
+				line-height: 50px;
+				font-size: 16px;
+				color: #323232;
+			}
+			.mui-card{
+				margin: 10px auto;
+			}
+			
+			.mui-card .mui-table-view-cell{
+				padding: 15px;
+			}
+			.mui-card .mui-table-view-cell>a:not(.mui-btn){
+				margin: -15px;
+			}
+			.myCenter .mui-icon-chat{
+				font-size: 19px;
+			}
+			
+			.userNameBox{
+				padding: 4px;
+			}
+			
+			.userNameBox .userName{
+				font-size: 16px;
+				color: #333;
+				margin-bottom: 8px;
+			}
+			
+			.userNameBox .info{
+				color: #999;
+			}
+			body>.mui-progressbar{
+				top:0;
+			}
 		</style>
 	</head>
 
