--- a/html/card/index.html
+++ b/html/card/index.html
@@ -233,7 +233,7 @@
 							top:"38px",
 							bottom:"0px"
 						},
-						extras: {}
+						extras: {closeFlag: true}
 					}],
 					onChange: function(obj) {
 						var c = document.querySelector(".mui-control-item.mui-active");
