--- a/html/myCenter/history.html
+++ b/html/myCenter/history.html
@@ -32,7 +32,7 @@
 			        top:'45px',//mui标题栏默认高度为45px；
 			        bottom:'0px'//默认为0px，可不定义；
 			      },
-			      extras:{requestUrl: '123', pullDown: false, pullUp: true, closeFlag: true}//额外扩展参数;
+			      extras:{requestUrl: '123', pullDown: false, pullUp: true, closeFlag: false}//额外扩展参数;
 			    }]
 			  });
 		</script>
