--- a/html/myCenter/feedback.html
+++ b/html/myCenter/feedback.html
@@ -78,7 +78,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left mui-text-white"></a>
-			<button id="submit" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">发送</button>
+			<button id="submit" class="mui-btn mui-btn-link mui-pull-right">发送</button>
 			<h1 class="mui-title">用户反馈</h1>
 		</header>
 		<div class="mui-content">
