--- a/html/myCenter/userSet.html
+++ b/html/myCenter/userSet.html
@@ -38,6 +38,18 @@
 				width: 40px;
 				height: 40px;
 			}
+			.mui-fullscreen{
+				background-color: rgba(0,0,0,.7);
+			}
+			.mui-slider .mui-slider-group .mui-slider-item{
+				text-align: center;
+			}
+			.mui-slider .mui-slider-group .mui-slider-item img{
+				width: auto;
+				-webkit-user-select: none;
+				background-position: 0px 0px, 10px 10px;
+				background-size: 20px 20px;
+			}
 		</style>
 	</head>
 
