--- a/html/techDictionary/index.html
+++ b/html/techDictionary/index.html
@@ -92,7 +92,10 @@
 			}
 			
 			.mui-slider-indicator.mui-segmented-control {
-				background-color: #efeff4;
+				background-color: #ffffff;
+			}
+			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item{
+				color:#666666;
 			}
 		</style>
 	</head>
